# autograder-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/autograder_ai/: engine.py
src/autograder_ai/clients/: __init__.py  ollama_client.py  openai_client.py
src/autograder_ai/core/: utils.py
src/autograder_ai/core/file_hanlders/: __init__.py  base.py  code.py  pdf.py
src/autograder_ai/core/pre_processors/: __init__.py  assignment.py  base.py  submission.py
src/autograder_ai/utils/: __init__.py  code_execution.py  json_helpers.py
src/autograder_ai/workflows/builders/: __init__.py  test_execution.py  test_generation.py
src/autograder_ai/workflows/nodes/: __init__.py  test_execution.py  test_generation.py
src/autograder_ai/workflows/prompts/: __init_.py  __init__.py  test_execution.py  test_generation.py
src/autograder_ai/workflows/states/: __init__.py  evaluation.py  test_generation.py
