[project]
name = "autograder-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pypdf2 (>=3.0.1,<4.0.0)",
    "black (>=25.11.0,<26.0.0)"
]

[tool.poetry]
packages = [{include = "autograder_ai", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
