[project]
name = "autograder-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "pypdf2 (>=3.0.1,<4.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "langgraph (>=1.0.3,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-ollama (>=1.0.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain-experimental (>=0.4.0,<0.5.0)",
    "langchain-core (>=1.1.0,<2.0.0)",
    "langchain (>=1.0.8,<2.0.0)",
    "langchain-openai (>=1.0.3,<2.0.0)"
]

[tool.poetry]
packages = [{include = "autograder_ai", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
